add js and ajax

--- a/src/main/resources/htmls/Teach_GradeEdit.html
+++ b/src/main/resources/htmls/Teach_GradeEdit.html
@@ -77,6 +77,6 @@
 			</tbody>
 		</table>
 	</div>
-	<button class="btn btn-info" name="submit" type="submit">Submit</button>
+	<a href="./Teach_Grade.html"><button class="btn btn-info" name="submit" type="submit">Submit</button></a>
 </body>
 </html>
