--- a/src/main/resources/htmls/index.html
+++ b/src/main/resources/htmls/index.html
@@ -7,16 +7,16 @@
 <!--	<link rel="stylesheet" href="style_index.css">        -->
 	<style type="text/css">
 	body{
-		background-image: url(resource/picture/background2.png);
+		background-image: url(../resource/picture/background2.png);
 		padding:0px;
 		margin: 0px;
 	}
-	.
+	.container{
+		margin-top: 8%;
+	}
 	h1{
-		font-size: 70px;
+		font-size: 60px;
 		font-family:"Microsoft YaHei";
-		margin-top: 12%;
-		margin-left: 3%;
 		text-align：center;
 		color:white;
 	}
@@ -30,16 +30,16 @@
 <body>
 <div class="navbar navbar-default-default" role="navigation">
 	<ul class="nav navbar-nav">
-		<li><a href="##">Login</a></li>
-		<li><a href="##">Regist</a></li>
+		<li><a href="./login.html">Login</a></li>
+		<li><a href="./regist.html">Regist</a></li>
 		<li><a href="##">About Us</a></li>
 		<li><a href="##">Exit</a></li>
 	</ul>
 </div>
-<div>
+<div class="container">
 	<h1>The Management of Students' Grades</h1>
 	<br />
-	<button class="btn btn-primary" type="button">Welcome</button>
+	<a href="./login.html"><button class="btn btn-primary" type="button">Welcome</button></a>
 </div>
 
 
