--- a/src/main/resources/htmls/regist.html
+++ b/src/main/resources/htmls/regist.html
@@ -5,30 +5,102 @@
 	<title>Regist</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style type="text/css">
-		body{
-			background-image: url(resource/picture/background1.png);
-			padding:0px;
-			margin:0px;
-		}
-		.form-group{
-			width: 400px;
-		}
+	body{
+		background-image: url(../resource/picture/background1.png);
+		padding:0px;
+		margin:0px;
+	}
+	h1{
+		text-align: center;
+	}
+	.form-group{
+		width: 30%;
+		margin-top: 3%;
+		margin-left: 35%;
+	}
+	button{
+		margin-left: 48%;
+	}
 	</style>
+	<script type="text/javascript">
+		window.onload = function () {
+		document.getElementsByName("submit")[0].onclick = function(){
+			//send AJAX submit request;
+			var request = new XMLHttpRequest();
+			request.open("POST","backend_url");
+
+			//create a JSON(loginInfo) to save the information of usrname,password,confirm and identity;
+			var registInfo = {
+				"Name":"",
+				"Password":"",
+				"Confirm":"", 
+				"Identity":"",
+			};
+			registInfo["Name"] = document.getElementsByName("Regist_usrname").value;
+			registInfo["Password"] = document.getElementsByName("Regist_password").value;
+			registInfo["Confirm"] = document.getElementsByName("Regist_confirm").value;
+			var identity = document.getElementsByName("userType")[0];	
+				switch(identity.value){
+					case "student" : 
+						registInfo["Identity"] = "student";			
+						break;
+					case "teacher" : 
+						registInfo["Identity"] = "teacher";		
+						break;
+					case "fucultyman" : 
+						registInfo["Identity"] = "fucultyman";			
+						break;
+					default: 
+						alert("false");
+						break;
+					}
+
+			request.setRequestHeader("Content-Type","application/x-www-form-urlencoded");
+			request.send(JSON.stringify(registInfo));
+			request.onreadystatechange = function(){
+				if(request.readyState === 4 && request.status ===200 ){
+					alert("success to connect with server");
+					switch(identity.value){
+						case "student" :
+							window.open('./Stu_StuInfo.html','_blank');
+							break;
+						case "teacher" :
+							window.open('./Teach_TeachInfo.html','_blank');
+							break;
+						case "fucultyman" :
+							window.open('./Fac_FacInfo.html','_blank');
+							break;
+						default:
+							alert("false");
+					}
+				}
+				else{
+					alert("false:" + request.status);
+				}
+			}
+
+		}
+	}
+	</script>
 </head>
 <body>
-<h1>Regist</h1>
-<form role="form">
-	<div class="form-group">
-		Name:<input type="text" class="form-control" name="Regist_usrname" placeholder="Your name,please"/><br />
-		Password:<input type="password" class="form-control" name="Regist_password" placeholder="Password,please"/><br />
-		Confirm:<input type="password" class="form-control" name="Regist_confirm" placeholder="Try again"/><br />
-		Identity:<select class="form-control">
-			<option>student</option>
-			<option>teacher</option>
-			<option>fucultyman</option>
-		</select>
-	</div>
-</form>
-	<input type="Submit" class="submit" name="Submit" value="OK"/>
+	<br />
+	<br />
+	<h1>Regist</h1>
+	<form role="form">
+		<div class="form-group">
+			Name:<input type="text" class="form-control" name="Regist_usrname" placeholder="Your name,please"/><br />
+			Password:<input type="password" class="form-control" name="Regist_password" placeholder="Password,please"/><br />
+			Confirm:<input type="password" class="form-control" name="Regist_confirm" placeholder="Try again"/><br />
+			Identity:<select class="form-control" name="userType">
+				<option>student</option>
+				<option>teacher</option>
+				<option>fucultyman</option>
+			</select>
+		</div>
+	</form>
+
+	<button class="btn btn-info" name="submit" type="submit">OK</button>
+
 </body>
 </html>
