--- a/src/main/resources/htmls/Teach_TeachInfo.html
+++ b/src/main/resources/htmls/Teach_TeachInfo.html
@@ -6,14 +6,26 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style type="text/css">
 	body{
-		background-image: url(resource/picture/background1.png);
+		background-image: url(../resource/picture/background1.png);
 		padding: 0px;
-		margin:0px;
+		margin: 0px;
+	}
+	h1{
+		text-align: center;
 	}
 	.form-group{
-		width:500px;
+		margin-top: 3%;
+		position: relative;
+		left: 35%;
+	}
+	.form-control{
+		width:30%;
+	}
+	button{
+		margin-left: 48%;
 	}
 	</style>
+	<script src="../resource/js/Teach_TeachInfo.js"></script>
 </head>
 <body>
 	<h1>Information</h1>
