use self-provided bootstrap framework file and jquery library file

--- a/src/main/resources/htmls/index.html
+++ b/src/main/resources/htmls/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>The Management of Students' Grades</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" href="resource/css/bootstrap.min.css">
 <!--	<link rel="stylesheet" href="style_index.css">        -->
 	<style type="text/css">
 	body{
@@ -43,7 +43,7 @@
 </div>
 
 
-<script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> 
+<script src="resource/js/jquery.js"></script>
+<script src="resource/js/bootstrap.min.js"></script> 
 </body>
 </html>
