--- a/src/main/resources/htmls/Stu_Grade.html
+++ b/src/main/resources/htmls/Stu_Grade.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="type/html; charset=utf-8">
 	<title>Grade</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="resource/css/bootstrap.min.css">
 	<style type="text/css">
 	body{
 		padding: 0px;
