change fucultyman to facultyman

--- a/src/main/resources/htmls/regist.html
+++ b/src/main/resources/htmls/regist.html
@@ -36,7 +36,7 @@
 			Identity:<select class="form-control" name="userType">
 				<option>student</option>
 				<option>teacher</option>
-				<option>fucultyman</option>
+				<option>facultyman</option>
 			</select>
 		</div>
 	</form>
