--- a/src/main/resources/htmls/Teach_Grade.html
+++ b/src/main/resources/htmls/Teach_Grade.html
@@ -13,7 +13,6 @@
 		text-align: center;
 	}
 	.form-group{
-		width:20%;
 		margin-left: 10%;
 	}
 	.table-responsive{
@@ -36,6 +35,9 @@
 	}
 	#btn_print{
 		margin-left: 10%;
+	}
+	#subject{
+		width: 20%;
 	}
 	</style>
 	<script src="../resource/js/Teach_Grade.js"></script>
